--- a/services.html
+++ b/services.html
@@ -62,37 +62,51 @@
     <div class="primary-header">
       <div class="container">
         <div class="primary-header-inner">
-          <div class="header-logo">
-            <a href="#"><img src="img/logo-dark.png" alt="Indico" /></a>
+          <div class="menu-left">
+            <div class="header-logo">
+              <a href="#"><img src="img/favicon.jpg" alt="Indico" /> </a>
+            </div>
+            <div class="header-text">
+              The Engineers & Architects Limited
+            </div>
           </div>
-          <div class="header-menu-wrap">
-            <ul class="dl-menu">
-              <li><a href="index.html">Home</a></li>
-              <li><a href="about.html">About</a></li>
-              <li><a href="services.html">Services</a></li>
-              <li>
-                <a href="#">Pages</a>
-                <ul>
-                  <li><a href="projects.html">Our Projects</a></li>
+          <div class="menu-right">
+            <div class="header-menu-wrap">
+              <ul class="dl-menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li>
+                  <a href="#">Pages</a>
+                  <ul>
+                    <li><a href="projects.html">Our Projects</a></li>
 
-                  <li><a href="team.html">Our Team</a></li>
-                </ul>
-              </li>
-              <li><a href="blog.html">Blog</a></li>
-              <li><a href="contact.html">Contact</a></li>
-            </ul>
-          </div>
-          <div class="header-right">
-            <a class="menu-btn" href="tel:+8802222243287">Call Now</a>
+                    <li><a href="team.html">Our Team</a></li>
+                  </ul>
+                </li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="contact.html">Contact</a></li>
+              </ul>
+            </div>
+            <div class="header-right">
+              <a class="menu-btn" href="tel:+8802222243287"><i class="bi bi-telephone-fill"></i></a>
 
-            <div class="mobile-menu-icon">
-              <div class="burger-menu">
-                <div class="line-menu line-half first-line"></div>
-                <div class="line-menu"></div>
-                <div class="line-menu line-half last-line"></div>
+              <div class="mobile-menu-icon">
+                <div class="burger-menu">
+                  <div class="line-menu line-half first-line"></div>
+                  <div class="line-menu"></div>
+                  <div class="line-menu line-half last-line"></div>
+                </div>
               </div>
             </div>
           </div>
+
+
+
+
+
+
+
         </div>
       </div>
     </div>
