--- a/team.html
+++ b/team.html
@@ -53,36 +53,38 @@
   <div class="site-preloader-wrap">
     <div class="spinner"></div>
   </div>
-  <header class="header" id="header">
-    <div class="primary-header">
-      <div class="container">
-        <div class="primary-header-inner">
+<header class="header" id="header">
+  <div class="primary-header">
+    <div class="container">
+      <div class="primary-header-inner">
+        <div class="menu-left">
           <div class="header-logo">
-            <a href="#"><img src="img/logo-dark.png" alt="Indico"></a>
+            <a href="#"><img src="img/favicon.jpg" alt="Indico" /> </a>
           </div>
+          <div class="header-text">
+            The Engineers & Architects Limited
+          </div>
+        </div>
+        <div class="menu-right">
           <div class="header-menu-wrap">
             <ul class="dl-menu">
-              <li><a href="index.html">Home</a>
-
-              </li>
-              <li><a href="about.html">About</a>
-
-              </li>
-              <li><a href="services.html">Services</a>
-              <li><a href="#">Pages</a>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="services.html">Services</a></li>
+              <li>
+                <a href="#">Pages</a>
                 <ul>
                   <li><a href="projects.html">Our Projects</a></li>
 
                   <li><a href="team.html">Our Team</a></li>
                 </ul>
               </li>
-              <li><a href="blog.html">Blog</a>
-              </li>
+              <li><a href="blog.html">Blog</a></li>
               <li><a href="contact.html">Contact</a></li>
             </ul>
           </div>
           <div class="header-right">
-            <a class="menu-btn" href="tel:+8802222243287">Call Now</a>
+            <a class="menu-btn" href="tel:+8802222243287"><i class="bi bi-telephone-fill"></i></a>
 
             <div class="mobile-menu-icon">
               <div class="burger-menu">
@@ -93,9 +95,17 @@
             </div>
           </div>
         </div>
+
+
+
+
+
+
+
       </div>
     </div>
-  </header>
+  </div>
+</header>
   <section class="page-header padding">
     <div class="container">
       <div class="page-content text-center">
@@ -113,7 +123,7 @@
             <div class="overlay"></div>
             <img src="img/Worker-1.jpg" alt="team">
             <div class="team-content">
-              <h3>Jhon Castellon</h3>
+              <h3>Jhon </h3>
               <span>Architect</span>
             </div>
             <ul class="team-social">
@@ -129,7 +139,7 @@
             <div class="overlay"></div>
             <img src="img/Worker-2.jpg" alt="team">
             <div class="team-content">
-              <h3>José Carpio</h3>
+              <h3>Hemel</h3>
               <span>Designer</span>
             </div>
             <ul class="team-social">
@@ -145,7 +155,7 @@
             <div class="overlay"></div>
             <img src="img/Worker-3.jpg" alt="team">
             <div class="team-content">
-              <h3>Valentin Lacoste</h3>
+              <h3>Hemel</h3>
               <span>Developer</span>
             </div>
             <ul class="team-social">
