--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Construction & Building HTML Template" />
+  <meta name="description" content="TEAL | The Engineears And Architects">
   <meta name="author" content="AlexaTheme" />
   <title>TEAL | The Engineears And Architect</title>
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.jpg" />
@@ -41,7 +41,7 @@
   <link rel="stylesheet" href="css/owl.carousel.css" />
 
   <link rel="stylesheet" href="css/main.css" />
-<!-- Option 1: Include in HTML -->
+  <!-- Option 1: Include in HTML -->
 
   <link rel="stylesheet" href="css/responsive.css" />
   <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
@@ -758,7 +758,7 @@
     </div>
     <div class="container footer-menu">
       <div class="f-menu">
-        <marquee><a href="">TEAL The Engineers And Architects Limited</a></marquee>
+        <marquee><a href="" style="border: none;">The Engineers And Architects Limited</a><span style="color: #6D3129; ">Designer Sagor</span></marquee>
       </div>
     </div>
     <div class="container copyright">
@@ -771,7 +771,6 @@
           </p>
         </div>
 
-        <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
         <div class="col-md-6">
           <p>
             Designed By
