--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Construction & Building HTML Template">
+<meta name="description" content="TEAL | The Engineears And Architects">
     <meta name="author" content="AlexaTheme">
     <title>TEAL | The Engineears And Architect</title>
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
